chore(test): adapt the test for lead developers

--- a/api/.env
+++ b/api/.env
@@ -44,3 +44,6 @@ MERCURE_PUBLIC_URL=https://localhost/.well-known/mercure
 # The secret used to sign the JWTs
 MERCURE_JWT_SECRET="!ChangeMe!"
 ###< symfony/mercure-bundle ###
+
+MINIO_ROOT_USER=root
+MINIO_ROOT_PASSWORD=root
