--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,23 @@ services:
       # you may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./api/docker/db/data:/var/lib/postgresql/data:rw
 
+  minio:
+    image: minio/minio
+    command: server /data --console-address ":9001"
+    environment:
+      - MINIO_ROOT_USER=${MINIO_ROOT_USER:-root}
+      - MINIO_ROOT_PASSWORD=${MINIO_ROOT_PASSWORD:-root}
+    ports:
+      - target: 9000
+        published: ${MINIO_PORT:-9000}
+        protocol: tcp
+      - target: 9001
+        published: ${MINIO_CONSOLE_PORT:-9001}
+        protocol: tcp
+    volumes:
+      - minio_data:/data:rw
+      - minio_config:/root/.minio:rw
+
 # Mercure is installed as a Caddy module, prevent the Flex recipe from installing another service
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
@@ -72,8 +89,10 @@ volumes:
   php_socket:
   caddy_data:
   caddy_config:
-###> doctrine/doctrine-bundle ###
+  ###> doctrine/doctrine-bundle ###
   db_data:
-###< doctrine/doctrine-bundle ###
+  ###< doctrine/doctrine-bundle ###
+  minio_data:
+  minio_config:
 ###> symfony/mercure-bundle ###
 ###< symfony/mercure-bundle ###
