--- a/api/composer.json
+++ b/api/composer.json
@@ -17,11 +17,14 @@
         "phpdocumentor/reflection-docblock": "^5.2",
         "symfony/asset": "6.0.*",
         "symfony/console": "6.0.*",
+        "symfony/doctrine-messenger": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/expression-language": "6.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/http-client": "6.0.*",
         "symfony/mercure-bundle": "^0.3.2",
+        "symfony/messenger": "6.0.*",
         "symfony/monolog-bundle": "^3.5",
         "symfony/property-access": "6.0.*",
         "symfony/property-info": "6.0.*",
@@ -35,6 +38,7 @@
     "require-dev": {
         "api-platform/schema-generator": "^4.0",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "liip/test-fixtures-bundle": "^2.4",
         "symfony/browser-kit": "6.0.*",
         "symfony/css-selector": "6.0.*",
         "symfony/debug-bundle": "6.0.*",
